--- a/nerpinar/templates/base.html
+++ b/nerpinar/templates/base.html
@@ -11,6 +11,12 @@
 </head>
 <body>
     <header>
+        {% if user.is_authenticated %}
+            <p>Добро пожаловать, {{ user.username }}! <a href="{% url 'users:logout' %}">Выйти</a></p>
+        {% else %}
+            <p><a href="{% url 'users:login' %}">Войти</a> | <a href="{% url 'users:register' %}">Зарегистрироваться</a></p>
+        {% endif %}
+
         <a href="{% url 'home' %}" class="logo-link">
             <!-- Логотип и название -->
             <h1>Аквариум байкальской нерпы</h1>
