--- a/nerpinar/templates/base.html
+++ b/nerpinar/templates/base.html
@@ -22,8 +22,8 @@
             <h1>Аквариум байкальской нерпы</h1>
         </a>
         <nav>
-            <a >О нас</a>
-            <a >Билеты</a>
+            <a href="{% url 'about' %}"> О нас</a>
+            <a href="{% url 'tickets' %}">Билеты</a>
         </nav>
     </header>
 
