--- a/nerpinar/templates/base.html
+++ b/nerpinar/templates/base.html
@@ -23,7 +23,7 @@
         </a>
         <nav>
             <a href="{% url 'about' %}"> О нас</a>
-            <a href="{% url 'tickets' %}">Билеты</a>
+            <a href="{% url 'shows' %}">Билеты</a>
         </nav>
     </header>
 
