--- a/nerpinar/templates/base.html
+++ b/nerpinar/templates/base.html
@@ -1,38 +1,44 @@
-<!DOCTYPE html>
+{% load static %}
+<!doctype html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Нерпинарий{% endblock %}</title>
-    {% load static %}
-
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'base/css/style.css' %}">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.6.0/css/all.css">
+    {% block extra_css %}{% endblock %}
 </head>
 <body>
-    <header>
-        {% if user.is_authenticated %}
-            <p>Добро пожаловать, {{ user.username }}! <a href="{% url 'users:logout' %}">Выйти</a></p>
-        {% else %}
-            <p><a href="{% url 'users:login' %}">Войти</a> | <a href="{% url 'users:register' %}">Зарегистрироваться</a></p>
-        {% endif %}
-
-        <a href="{% url 'home' %}" class="logo-link">
-            <!-- Логотип и название -->
-            <h1>Аквариум байкальской нерпы</h1>
-        </a>
-        <nav>
-            <a href="{% url 'about' %}"> О нас</a>
-            <a href="{% url 'shows' %}">Билеты</a>
-        </nav>
-    </header>
-
+   <header class="site-header">
+       <!-- Верхняя панель: телефон и адрес -->
+        <div class="top-bar">
+            <img src="{% static 'base/img/nerpinary_logo.svg' %}" alt="Логотип" class="logo" />
+            <span class="contact-item">
+                <i class="fa-solid fa-phone"></i>
+                +7 (3952) 55-44-32
+            </span>
+            <span class=contact-item>
+                <i class="fa-solid fa-location-dot"></i>
+                г. Иркутск, ул. 2 Железнодорожная, 66
+            </span>
+        </div>
+       <aside class="sidebar">
+            <ul class="sidebar-menu">
+                <li><a href="{% url 'home' %}" class="sidebar-link">ГЛАВНАЯ</a></li>
+                <li><a href="{% url 'about' %}" class="sidebar-link">О НАС</a></li>
+                <li><a href="" class="sidebar-link">ГРАФИК ПРЕДСТАВЛЕННИЙ</a></li>
+                <li><a href="" class="sidebar-link">КОНТАКТЫ</a></li>
+            </ul>
+       </aside>
+   </header>
     <main>
-        {% block content %}{% endblock %}
+        {% block content %}
+        {% endblock %}
     </main>
 
-    <footer>
-        <p>© 2024 Нерпинарий, Иркутск</p>
-    </footer>
 </body>
 </html>
